--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -48,10 +48,9 @@ jobs:
         uses: anothrNick/github-tag-action@1.36.0
         id: version
         env:
-          RELEASE_BRANCHES: production
+          RELEASE_BRANCHES: master
           WITH_V: true
           PRERELEASE_SUFFIX: ${{ steps.extract_branch.outputs.branch }}
-          DRY_RUN: true
       
       - name: log outputs
         id: logOutputs
